= 3.63.0 (2022-12-16)

* Add autoload_hash_branches plugin for autoloading file for a hash branch when there is a request for that branch (jeremyevans)

* Add mailer plugin :terminal option to make r.mail use a terminal match when provided arguments (jeremyevans)

= 3.62.0 (2022-11-14)

* Add typecast_params_sized_integers plugin for converting parameters to sized integers (jeremyevans)

* Add Integer_matcher_max plugin for setting maximum integer value matched by the Integer matcher (jeremyevans)

* Allow class matchers in the class_matchers plugin to skip matching based on regexp match values (jeremyevans)

* Fix RodaRequest#matched_path when using unescape_path plugin (jeremyevans) (#286)

= 3.61.0 (2022-10-12)

* Make Integer matcher limit integer segments to 100 characters by default (jeremyevans)

* Limit input bytesize by default for integer, float, and date/time typecasts in typecast_params (jeremyevans)

= 3.60.0 (2022-09-13)

* Add link_to plugin with link_to method for creating HTML links (jeremyevans)

= 3.59.0 (2022-08-12)

* Add additional_render_engines plugin, for considering multiple render engines for templates (jeremyevans)

* Fix typo in private method name in delete_empty_headers plugin (mculpt) (#279)

= 3.58.0 (2022-07-13)

* Add filter_common_logger plugin for skipping the logging of certain requests when using the common_logger plugin (jeremyevans)

* Make exception_page plugin use Exception#detailed_message on Ruby 3.2+ (jeremyevans)

* Make heartbeat plugin compatible with recent changes in the rack master branch (jeremyevans)

= 3.57.0 (2022-06-14)

* Make static_routing plugin depend on the hash_paths instead of the hash_routes plugin (jeremyevans)

* Split hash_branches and hash_paths plugins from hash_routes plugin (jeremyevans)

* Hex escape unprintable characters in common_logger plugin output (jeremyevans)

* Add hash_branch_view_subdir plugin for automatically appending a view subdirectory on a successful hash branch (jeremyevans)